--- a/flex-e-grid-main/assets/css/estilos.css
+++ b/flex-e-grid-main/assets/css/estilos.css
@@ -104,28 +104,33 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+.cartao__destaque {
+    grid-column: span 2;
+}
 .cartao__titulo {
     font-size: 1.2rem;
     font-weight: 700;
+    grid-column: span 2;
 }
 .cartao__perfil {
     color:#95999C;
     font-size:0.9rem;
+    grid-column: span 2;
 }
 .cartao__info {
     display: flex;
     align-items:center;
     color: #95999C
 }
-.cartao__info--tempo{
+.cartao__info--tempo::before{
     content:"\e90c";
     margin-right: 8px;
 }
-.cartao__info--visualizacao{
+.cartao__info--visualizacao::before{
     content:"\e90f";
     margin-right: 8px;
 }
-.cartai__botao {
+.cartao__botao {
     display:flex;
     justify-content: center;
     align-items: center;
@@ -141,7 +146,7 @@ body {
 }
 .cartao__botao--destaque{
     width: 100%;
+    grid-column: span 2;
 }
 .cartao__botao--destaque::before {
     margin-right:8px;
-}
