atualização do projeto

--- a/flex-e-grid-main/assets/css/estilos.css
+++ b/flex-e-grid-main/assets/css/estilos.css
@@ -39,6 +39,7 @@ body {
     left:-100vw;
     transition:.25s; 
 }
+
 .menu-lateral--ativo{
     left:0;
     transition:.25s;
@@ -88,10 +89,16 @@ body {
 }
 .principal {
     padding: 24px 16px;
+    display: grid;
+    gap: 16px;
 }
 .titulo-pagina {
     font-size: 1.5rem;
     font-weight: 700;
+}
+.titulo-secao {
+    font-size: 1,2rem;
+    font-weight:700;
 }
 .cartao {
     width: 100%;
@@ -99,10 +106,13 @@ body {
     overflow: hidden;
     background-color: #2C343A;
 }
+.cartao--destaque{
+}
 .cartao__conteudo {
     padding: 16px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto 1fr;
+    gap: 8px;
 }
 .cartao__destaque {
     grid-column: span 2;
@@ -139,6 +149,7 @@ body {
     height: 40px;
     border-radius:10px;
     font-size:0.9rem;
+    justify-self: flex-end;
 }
 .cartao__botao--play::before{
     content:"\e90b";
@@ -150,4 +161,8 @@ body {
 }
 .cartao__botao--destaque::before {
     margin-right:8px;
+}
+.secao {
+    display: grid;
+    gap: 16px;
 }
