--- a/flex-e-grid-main/assets/css/estilos.css
+++ b/flex-e-grid-main/assets/css/estilos.css
@@ -2,11 +2,16 @@
     font-family: 'icones';
     src: url(../font/icones.ttf);
 }
-
 body {
     background-color: #1D232A;
     font-family:'Open Sans','icones',sans-serif;
     color: #FFFFFF;
+}
+@media screen and (min-width: 1440px){
+    body {
+        display: grid;
+        grid-template-columns: auto 1fr;
+    }
 }
 .cabecalho {
     display:flex;
@@ -27,7 +32,52 @@ body {
 .cabecalho__logo {
     width: 40px;
 }
+.cabecalho__perfil {
+    display:none
+}
+@media screen and (min-width:1440px){
+    .cabecalho {
+    background-color: #1D232A;
+    display: grid;
+    column-gap: 35px;
+    grid-template-columns: 1fr auto;
+    padding:16px 60px;
+    height: 80px;
+    box-sizing: border-box;
+    }
+    .cabecalho__menu {
+        display:none;
+    }
+    .cabecalho__logo {
+        display: none
+    }
+    .cabecalho__perfil{
+        display: grid;
+        grid-template-columns: repeat(3,auto);
+        column-gap: 8px;
+        align-items: center;
+        justify-self: flex-end;
+        color: #95999C;
+        padding: 8px 32px;
+        border-right: 1px solid #95999C;
+    }
 
+    .cabecalho__perfil::before{
+        content: "";
+        display: block;
+        width:32px;
+        height:32px;
+        background-image: url(../img/profile_2.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    .cabecalho__perfil::after {
+        content:"\e90d";
+        color: #FFFFFF;
+        font-size: 1.5rem;
+    }
+}
 .menu-lateral {
     display: flex;
     flex-direction: column;
@@ -87,6 +137,12 @@ body {
 .menu-lateral__link--pinturas::before {
     content:"\e90a";
 }
+@media screen and (min-width:1440px){
+    .menu-lateral {
+        position: static;
+        width: 200px;
+    }
+}
 .principal {
     padding: 24px 16px;
     display: grid;
@@ -100,6 +156,14 @@ body {
     font-size: 1,2rem;
     font-weight:700;
 }
+@media screen and (min-width:1440px){
+    .principal{
+        display: grid;
+        grid-template-columns:auto 1fr auto;
+        column-gap: 32px;
+        padding: 16px 60px;
+}
+}
 .cartao {
     width: 100%;
     border-radius: 15px;
@@ -107,12 +171,13 @@ body {
     background-color: #2C343A;
 }
 .cartao--destaque{
+  margin-bottom: 16px; 
 }
 .cartao__conteudo {
     padding: 16px;
     display: grid;
     grid-template-columns: auto 1fr;
-    gap: 8px;
+    gap: 16px;
 }
 .cartao__destaque {
     grid-column: span 2;
@@ -136,6 +201,10 @@ body {
     content:"\e90c";
     margin-right: 8px;
 }
+.cartao__info--preco::before{
+    content:"\e905";
+    margin-right: 8px;
+}
 .cartao__info--visualizacao::before{
     content:"\e90f";
     margin-right: 8px;
@@ -153,6 +222,10 @@ body {
 }
 .cartao__botao--play::before{
     content:"\e90b";
+    font-size:24px;
+}
+.cartao__botao--carrinho::before{
+    content:"\e901";
     font-size:24px;
 }
 .cartao__botao--destaque{
